<resources>
    <string name="app_name">Maths Training</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_multiply">X</string>
    <string name="button_subtract">-</string>
    <string name="button_add">+</string>
    <string name="button_divide">/</string>
    <string name="function_sub">-</string>
    <string name="btn_equals">=</string>
    <string name="btn_enter">ENTER</string>
    <string name="btn_delete">DEL</string>
    <string name="btn_next">NEXT</string>
    <string name="icon_settings">Setting</string>
    <string name="choose_activity">Select Activity</string>
    <string name="random_button">RANDOM</string>
    <string name="subtract_total">30</string>
</resources>
