<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_activity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="36sp"
            android:textStyle="bold" android:textAlignment="center"/>
    <Button
            android:text="@string/button_multiply"
            android:layout_width="@dimen/Btn_size"
            android:layout_height="@dimen/Btn_size"
            android:id="@+id/button"
            android:onClick="multiply"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:backgroundTint="@color/colorPrimary"
            android:textSize="36sp"/>
    <Button
            android:text="@string/button_subtract"
            android:layout_width="@dimen/Btn_size"
            android:layout_height="@dimen/Btn_size"
            android:id="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button" app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="subtract" android:backgroundTint="@color/colorPrimary" android:textSize="36sp"/>
    <Button
            android:text="@string/button_add"
            android:layout_width="@dimen/Btn_size"
            android:layout_height="@dimen/Btn_size"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button4"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/button"
            android:onClick="addition" android:backgroundTint="@color/colorPrimary" android:textSize="36sp"/>
    <Button
            android:text="@string/button_divide"
            android:layout_width="@dimen/Btn_size"
            android:layout_height="@dimen/Btn_size"
            android:id="@+id/button4"
            app:layout_constraintStart_toEndOf="@+id/button3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:onClick="divide"
            android:backgroundTint="@color/colorPrimary" android:textSize="36sp"/>
    <Button
            android:layout_width="220dp"
            android:layout_height="@dimen/Btn_size"
            android:id="@+id/button5"
            android:backgroundTint="@android:color/holo_orange_dark" android:text="@string/random_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:fontFamily="sans-serif-medium"
            android:textSize="36sp" android:textColor="@android:color/background_light"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.52"
            android:onClick="random"/>
</androidx.constraintlayout.widget.ConstraintLayout>