<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CalculationActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp" android:typeface="normal" android:textStyle="bold" android:textAlignment="center"
            android:textColor="@color/colorAccent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="293dp"
            android:layout_height="50dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:id="@+id/linearLayout"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout2">
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/button_first" android:layout_weight="1"
                android:textSize="36sp" android:background="@android:color/background_light"
                style="@android:style/Widget.Button" android:textStyle="bold"/>
        <Button
                android:text="@string/function_sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/button_function" android:layout_weight="1"
                android:textSize="36sp" android:background="@android:color/background_light"
                style="@android:style/Widget.Button"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/button_second" android:layout_weight="1"
                android:textSize="36sp" android:background="@android:color/background_light"
                style="@android:style/Widget.Button" android:textStyle="bold"/>
        <Button
                android:text="@string/btn_equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/button_equals" android:layout_weight="1"
                android:textSize="36sp" android:background="@android:color/background_light"
                style="@android:style/Widget.Button"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/button_answer" android:layout_weight="1"
                android:textSize="36sp" android:background="@android:color/background_light"
                style="@android:style/Widget.Button" android:textAlignment="center" android:textStyle="bold"/>
    </LinearLayout>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tableLayout2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button_num7"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
            <Button
                    android:text="8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button_num8"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
            <Button
                    android:text="9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button_num9"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_num4"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
            <Button
                    android:text="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_num5"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
            <Button
                    android:text="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_num6"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_num1"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
            <Button
                    android:text="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_num2"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
            <Button
                    android:text="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_num3"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/button_del"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:backgroundTint="@android:color/holo_orange_light"
            />
            <Button
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/button_num0"
                    style="@android:style/Widget.DeviceDefault.Button" android:textStyle="bold"
                    android:textSize="36sp" android:backgroundTint="@android:color/holo_blue_light"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/button_enter"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:textAlignment="center" android:textSize="12sp"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/btn_enter"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>